Migrated database with new connection string in app.config using "update-database -verbose -ConnectionStringName Default"

--- a/NinjaDomain.DataModel/NinjaDomain.DataModel.csproj
+++ b/NinjaDomain.DataModel/NinjaDomain.DataModel.csproj
@@ -49,6 +49,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\201611211141253_Initial.cs" />
+    <Compile Include="Migrations\201611211141253_Initial.Designer.cs">
+      <DependentUpon>201611211141253_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="NinjaContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -61,6 +66,11 @@
       <Project>{626dfe96-6f74-4ca4-9953-9fb25f250896}</Project>
       <Name>NinjaDomain.Classes</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201611211141253_Initial.resx">
+      <DependentUpon>201611211141253_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
