--- a/NinjaDomain.DataModel/NinjaDomain.DataModel.csproj
+++ b/NinjaDomain.DataModel/NinjaDomain.DataModel.csproj
@@ -53,6 +53,10 @@
     <Compile Include="Migrations\201611211141253_Initial.Designer.cs">
       <DependentUpon>201611211141253_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611211208306_AddBirthdayToNinja.cs" />
+    <Compile Include="Migrations\201611211208306_AddBirthdayToNinja.Designer.cs">
+      <DependentUpon>201611211208306_AddBirthdayToNinja.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="NinjaContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -70,6 +74,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201611211141253_Initial.resx">
       <DependentUpon>201611211141253_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611211208306_AddBirthdayToNinja.resx">
+      <DependentUpon>201611211208306_AddBirthdayToNinja.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
