--- a/ConsoleApplication/App.config
+++ b/ConsoleApplication/App.config
@@ -4,6 +4,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <clear />
+    <add name="Default"
+         providerName="System.Data.SqlClient"
+         connectionString="Data Source=GODDESS\SQL2014;Initial Catalog=Test;Integrated Security=SSPI" />
+  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
